modules/gdscript/tests/scripts/analyzer/errors/use_value_of_void_function_utility.gd
func test():
	print(print()) # Built-in utility function.
